...
      />
      <Tabs.Screen
        name="more"
        options={{
          title: t("tabMore"),
          tabBarIcon: tabIcon(Ellipsis),
          tabBarButtonTestID: "tab-more",
        }}
      />
    </Tabs>
  );
}

...
